--- a/a/.project
+++ b/a/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>boostxl_edumkii_microphonefft</name>
+	<name>MSP-432-sound-ML-FL</name>
 	<comment></comment>
 	<projects>
 	</projects>
