--- a/MSP_Client/.project
+++ b/MSP_Client/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>boostxl_edumkii_microphonefft</name>
+	<name>MSP432_ML</name>
 	<comment></comment>
 	<projects>
 	</projects>
