test with bit-banging spi

--- a/MSP_Client/.settings/org.eclipse.core.resources.prefs
+++ b/MSP_Client/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,8 @@ encoding//Debug/ccs/subdir_rules.mk=UTF-8
 encoding//Debug/ccs/subdir_vars.mk=UTF-8
 encoding//Debug/lib/LcdDriver/subdir_rules.mk=UTF-8
 encoding//Debug/lib/LcdDriver/subdir_vars.mk=UTF-8
+encoding//Debug/lib/LoRa/subdir_rules.mk=UTF-8
+encoding//Debug/lib/LoRa/subdir_vars.mk=UTF-8
 encoding//Debug/lib/subdir_rules.mk=UTF-8
 encoding//Debug/lib/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
