updates to code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "math.h": "c",
         "stdbool.h": "c",
         "ml.h": "c",
-        "feature_extraction.h": "c"
+        "feature_extraction.h": "c",
+        "stdlib.h": "c"
     }
 }
